crates/cli/tests/snapshots/lib__check@unknown_field.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_field.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_field.nemo
---
success: false
exit_code: 1
----- stdout -----
[13] Error: Unknown field. F does not have a field named y
   ╭─[ tests/check/unknown_field.nemo:6:15 ]
   │
 6 │   F { x = 10, y = 20 }.y;
   │               ┬  
   │               ╰── Unknown field. F does not have a field named y
───╯

[13] Error: Unknown field. F does not have a field named y
   ╭─[ tests/check/unknown_field.nemo:6:24 ]
   │
 6 │   F { x = 10, y = 20 }.y;
   │                        ┬  
   │                        ╰── Unknown field. F does not have a field named y
───╯

[13] Error: Unknown field. F does not have a field named y
   ╭─[ tests/check/unknown_field.nemo:8:9 ]
   │
 8 │   set f.y = 20;
   │         ┬  
   │         ╰── Unknown field. F does not have a field named y
───╯


----- stderr -----
Error: "Check failed with 3 errors"
